# Agent-MCP

./: .env  .env.example  .gitignore  1.md  =64  AGENT_MCP_COMPARISON_ANALYSIS.md  AGENT_SANDBOX_IMPLEMENTATION_PLAN.md  AGENT_TODOS.md  AGENT_TODO_DASHBOARD.md  AI_INVENTORY_OPTIMIZATION_RESEARCH.md  API_DOCUMENTATION.md  Agent-MCP.code-workspace  BEVERLY_ERP_ROUTING_REVIEW.md  CELERY_SETUP.md  CONFIGURATION_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  CRITICAL_ANALYSIS_CLOVER_MIGRATION.md  DATABASE_ENHANCEMENT_COMPLETE.md  DATA_INTEGRATION_README.md  DATA_MAPPING.md  DISABLED_beverly_analytics_erp.py  DISABLED_run_beverly_knits.py  Dockerfile  ENHANCEMENT_SUMMARY_REPORT.md  ERP_DATA_INTEGRATION_SUMMARY.md  FINAL_MIGRATION_IMPROVEMENTS.md  GRANULAR_MIGRATION_SUCCESS.md  INSTRUCTIONS.md  INVENTORY_FORECASTING_IMPLEMENTATION.md  LICENSE  LICENSE_COMPLIANCE_NOTICE.md  LOCAL_EMBEDDINGS_GUIDE.md  MCD.md  MCP_TEAM_GUIDE.md  MIGRATION_SUCCESS_SUMMARY.md  MULTI_ROOT_TASK_ARCHITECTURE.md  PHASE_SYSTEM_IMPLEMENTATION.md  PRODUCTION_READINESS_TASKS.md  PYTHON_INSTALLATION.md  README.md  (+121 more)
.agent-activity/: live-feed.jsonl
.claude/: settings.json  settings.json.backup.1751873989725  settings.json.backup.1751875858181  settings.local.json.backup.1751874012254
ERP Data/: Expected_Yarn_Report (2).csv  Yarn_Demand_2025-07-26_0442.csv  Yarn_Demand_By_Style_2025-07-26_0442.csv  eFab_Inventory_F01_202507261.csv  eFab_Inventory_G00_20250726 (1).csv  eFab_Inventory_I01_20250726.csv  eFab_Inventory_P01_20250726.csv  eFab_SO_List_202507260305.csv  uploaded_Expected_Yarn_Report.xlsx  uploaded_Yarn_Demand_By_Style.xlsx  uploaded_eFab_Inventory_F01_20250804 (2).xlsx  uploaded_integration_test.csv  uploaded_invalid.txt  uploaded_large_test_data.csv  uploaded_performance_test.csv  uploaded_test.csv  uploaded_test_data.csv  uploaded_test_inventory.xlsx  uploaded_test_upload_data.csv  uploaded_validation_test.csv
MCD-EXAMPLE/: MCD-Database.md  MCD-Screens.md  MCD-example.md  MCD-report.md  MCD.md  README.md
agent-mcp-node/: .gitignore  BACKGROUND_AGENTS_SIMPLIFIED.md  CHANGELOG.md  CONFIGURATION.md  CRITICAL_DIRECT_ASSIGNMENT_TEST_FAILURE.md  CRITICAL_SECURITY_BUG_REPORT.md  CRITICAL_TEST_FAILURE_REPORT.md  FINAL_CRITICAL_TEST.md  IMPLEMENTATION_STATUS.md  MESSAGE_FOR_TEST_AGENT.md  MIGRATION_PLAN.md  PROMPT_TEST_REPORT.md  RAG_SYSTEM_EXPLAINED.md  README-EMBEDDING-PROVIDERS.md  README.md  SYSTEM_STATUS_REPORT.md  TOKEN_RESOURCES.md  TUI_IMPROVEMENTS.md  agent-mcp-tui.js  clear-rag-data.ts  critical-test.js  demo-api-key-tui.js  demo-interactive-tui.js  demonstrate-vulnerability.js  force-reindex.ts  get-admin-token.ts  package-lock.json  package.json  quick-test.sh  run-indexing.ts  server_log.txt  set-task-pending.js  test-all-features.sh  test-automated-agent-launch.ts  test-basic-functionality.sh  (+25 more)
(+399 files in other folders)
